--- a/BookingHutech/Web.config
+++ b/BookingHutech/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="BookingHutechConnectionString" connectionString="Data Source=DESKTOP-U4VC36O\SQLEXPRESS;Initial Catalog=DB_BookingHutechFinal;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="BookingHutechConnectionString" connectionString="Data Source=DESKTOP-TQVTDSF\SQL_NHUTANH_2014;Initial Catalog=DB_BookingHutechFinal;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="BookingHutechConnectionString" connectionString="workstation id=bookinghutechfinal.mssql.somee.com;packet size=4096;user id=bookinghutech_SQLLogin_1;pwd=l84lz5yhqx;data source=bookinghutechfinal.mssql.somee.com;persist security info=False;initial catalog=bookinghutechfinal" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
